style: fix text overflow

--- a/src/pages/SingleReviewPage/SingleReviewPage.module.scss
+++ b/src/pages/SingleReviewPage/SingleReviewPage.module.scss
@@ -18,7 +18,8 @@
       align-items: center;
     }
     .authorName {
-      width: 200px;
+      max-width: 210px;
+      line-height: 40px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
